# birthday-bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
bdaybot/: __init__.py  __main__.py  base.py  constants.py
bdaybot/data/: README.md  migrations.py  models.py  utils.py
bdaybot/data/migrations/: 00002_timestamp_add_tz.sql  0001_initial.sql
bdaybot/exts/: owner.py
